# SudokuSolver

./: CMakeLists.txt  MANIFEST  Makefile  Solver.py  SudokuSolvermodule.c  log.txt  questions.txt  setup.py  sudoku  sudoku.c  sudoku.h
include/: Stack.h  Sudoku.h
src/: Stack.c  Sudoku.c  sudoku.c
sudoku.dSYM/Contents/Resources/DWARF/: sudoku
